--- a/assets/css/layout/header.css
+++ b/assets/css/layout/header.css
@@ -1,6 +1,6 @@
 header {
     width: 100%;
-    height: 120px;
+    height: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,8 +20,9 @@ header {
 }
 
 .logo, .menu {
+    margin: 0;
     width: 100%;
-    height: 80px;
+    height: 100px;
     display: flex;
     align-items: center;
     background-color: var(--color-arena);
@@ -29,7 +30,7 @@ header {
 }
 
 .logo a {
-        display: flex;
+    display: flex;
     align-items: center;
     text-decoration: none;
     color: var(--color-black);
