--- a/assets/css/layout/footer.css
+++ b/assets/css/layout/footer.css
@@ -1,6 +1,6 @@
 footer {
     width: 100%;
-    height: 230px;
+    height: 250px;
     display: flex;
     flex-direction: column;
     background-color: var(--color-gris);
@@ -20,9 +20,9 @@ footer {
 .social-links {
     display: flex;
     justify-content: center;
-    gap: 18px;
+    gap: 5px;
     color: var(--color-durazno);
-    font-size: medium;
+    font-size: var(--space);
     flex-flow: row wrap; 
     height: auto;
     width: 640px;
@@ -60,11 +60,10 @@ footer {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    gap: 10px;
+    gap: 5px;
     float: left;
     color: var(--color-durazno);
-    margin: -10px 25px;
-
+    margin: -13px 20px;
 }
 
 .brand img {
@@ -75,12 +74,11 @@ footer {
 }
 
 .copyright {
+    display: flex;
     width: 100%;
-    height: 40px;
     background-color: var(--color-black);
     color: var(--color-blanco);
-    display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 0.9rem;
+    font-size: var(--space);
 }
